# agent-reliability-lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/evals/: core_benchmark.yaml
docs/: architecture.md  portfolio-positioning.md
scripts/: run_eval_gate.py
src/agent_reliability_lab/: __init__.py  cli.py
src/agent_reliability_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agent_reliability_lab/agents/: openai_adapter.py  runtime.py
src/agent_reliability_lab/core/: models.py  tooling.py
src/agent_reliability_lab/dashboard/: app.py
src/agent_reliability_lab/evals/: grader.py  runner.py
src/agent_reliability_lab/scenarios/: library.py
src/agent_reliability_lab/tools/: mock_tools.py
src/agent_reliability_lab/tracing/: trace.py
tests/: test_eval_runner.py  test_runtime.py
